Updanting the "Estante" Screen

--- a/Web/Prototype/Estante.html
+++ b/Web/Prototype/Estante.html
@@ -75,7 +75,7 @@
             ============================================= -->
         <section id="services">
             <div class="container">
-                <h2>Estante:</h2>
+                <h2>Minha Estante:</h2>
                 <hr class="light-sep">
                 <div class="services-box">
                     <div class="row wow fadeInUp" data-wow-delay=".3s">
@@ -118,41 +118,38 @@
 
                     <div class="row wow fadeInUp" data-wow-delay=".6s">
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Harry_Potter.jpg" width="190" height="290" alt="fotr">
+                            <div class="media-left"><img src="img/portfolio/fotr.jpg" width="190" height="290" alt="fotr">
                                 <a class="btn btn-light" href="#portfolio">Remover Livro</a>
                             </div>
 
                             <div class="media-body">
-                                <h3>Harry Potter e as Relíquias da Morte</h3>
-                                <p>Coleção: Harry Potter</p>
-                                <p>J. K. Rownling</p>
-
+                                <h3>The fellowship of the Ring</h3>
+                                <p>Coleção: The Lord of the Rings</p>
+                                <p>J.R.R. Tolkien</p>
                             </div>
                         </div>
-
-
-
+                        
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Harry_Potter.jpg" width="190" height="290" alt="fotr">
+                            <div class="media-left"><img src="img/estante/The_Hunger_Games.jpg" width="190" height="290" alt="fotr">
                                 <a class="btn btn-light" href="#portfolio">Remover Livro</a>
                             </div>
 
                             <div class="media-body">
-                                <h3>Harry Potter e as Relíquias da Morte</h3>
-                                <p>Coleção: Harry Potter</p>
-                                <p>J. K. Rownling</p>
+                                <h3>Jogos Vorazes</h3>
+                                <p>Coleção: Jogos Vorazes</p>
+                                <p>Suzanne Collins</p>
 
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Harry_Potter.jpg" width="190" height="290" alt="fotr">
+                            <div class="media-left"><img src="img/estante/Game.jpg" width="190" height="290" alt="fotr">
                                 <a class="btn btn-light" href="#portfolio">Remover Livro</a>
                             </div>
 
                             <div class="media-body">
-                                <h3>Harry Potter e as Relíquias da Morte</h3>
-                                <p>Coleção: Harry Potter</p>
-                                <p>J. K. Rownling</p>
+                                <h3>Game of Thrones (5 primeiros livros)</h3>
+                                <p>Coleção: Game of Thrones</p>
+                                <p>George R. R. Martin</p>
 
                             </div>
                         </div>
