--- a/Web/Prototype/Estante.html
+++ b/Web/Prototype/Estante.html
@@ -50,15 +50,15 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
+                        <a class="navbar-brand" href="#"></a>
                     </div>
                     <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                         <div class="col-md-8 col-xs-12 nav-wrap">
                             <ul class="nav navbar-nav">
-                                <li><a href="#welcome" class="page-scroll">Home</a></li>
+                                <li><a href="livrosproximos.html" >Home</a></li>
                                 <li><a href="pesquisa.html">Pesquisar</a></li>
-                                <li><a href="estante.html">Estante</a></li>
+                                <li><a href="#services" class="page-scroll">Estante</a></li>
                                 <li><a href="perfil.html">Minha Conta</a></li>
-                                <li><a href="ajuda.html">Ajuda</a></li>
                                 <li><a href="index.html">Sair</a></li>
                             </ul>
                         </div>
@@ -128,7 +128,7 @@
                                 <p>J.R.R. Tolkien</p>
                             </div>
                         </div>
-                        
+
                         <div class="col-md-4">
                             <div class="media-left"><img src="img/estante/The_Hunger_Games.jpg" width="190" height="290" alt="fotr">
                                 <a class="btn btn-light" href="#portfolio">Remover Livro</a>
@@ -159,29 +159,88 @@
             <hr class="light-sep">
         </section>
 
-        <!-- Footer
-                ============================================= -->
-        <footer>
-            <div class="container">
-                <h1>BookAway</h1>
-                <h6>Powered by: <span>Rise</span></h6>
-            </div>
-        </footer>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="bootstrap-assets/js/bootstrap.min.js"></script>
-        <script src="js/custom.js"></script>
-        <!-- JS PLUGINS -->
-        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
-        <script src="plugins/countTo/jquery.countTo.js"></script>
-        <script src="plugins/inview/jquery.inview.min.js"></script>
-        <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
-        <script src="plugins/WOW/dist/wow.min.js"></script>
-        <!-- GOOGLE MAP -->
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
-    </body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+        <section id="welcome">
+            <div class="container">
+                <h2>Adicionar Livro</h2>
+                <hr class="light-sep">
+                <div class="services-box">
+                    <div class="row wow fadeInUp" data-wow-delay=".3s">
+                        <div class="col-md-4">
+                            <div class="media-left"><img src="img/estante/capa_livro.jpg" width="190" height="290" alt="fotr">
+                                <a href="#services" class="btn-block page-scroll" style='background: #808080;' >Adicionar capa</a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <br></br>
+                            <h6>Nome</h6>
+                            <input type="text" class="form-control" id="Nome" placeholder="Nome">
+
+                            <h6>Coleção</h6>
+                            <input type="text" class="form-control" id="Colecao" placeholder="Coleção">
+
+                            <h6>Autor(a)</h6>
+                            <input type="text" class="form-control" id="Autor" placeholder="Autor(a)">
+
+                            <h6>Gênero</h6>
+                            <input type="text" class="form-control" id="Genero" placeholder="Gênero">
+
+                        </div>
+                    </div>
+
+                    <br></br>
+
+
+
+                    <div class="form-group">
+                        <textarea class="form-control" rows="9" placeholder="Descrição"></textarea>
+                    </div>
+                    <br></br>
+                    <div align="center">
+                        <a href="#services" class="btn-block page-scroll" style='background: #808080; width: 250px' >Adicionar Livro</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="light-sep">
+    </section>
+
+
+    <!-- Footer
+            ============================================= -->
+    <footer>
+        <div class="container">
+            <h1>BookAway</h1>
+            <h6>Powered by: <span>Rise</span></h6>
+        </div>
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="bootstrap-assets/js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- JS PLUGINS -->
+    <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script src="plugins/countTo/jquery.countTo.js"></script>
+    <script src="plugins/inview/jquery.inview.min.js"></script>
+    <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
+    <script src="plugins/WOW/dist/wow.min.js"></script>
+    <!-- GOOGLE MAP -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+</body>
 </html>
