--- a/Web/Prototype/estante.html
+++ b/Web/Prototype/estante.html
@@ -75,7 +75,7 @@
             ============================================= -->
         <section id="services">
             <div class="container">
-                <h2>Minha Estante:</h2>
+                <h2>Minha Estante</h2>
                 <hr class="light-sep">
                 <div class="services-box">
                     <div class="row wow fadeInUp" data-wow-delay=".3s">
@@ -158,20 +158,7 @@
             </div>
             <hr class="light-sep">
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        
         <section id="welcome">
             <div class="container">
                 <h2>Adicionar Livro</h2>
