--- a/Web/Prototype/Perfil.html
+++ b/Web/Prototype/Perfil.html
@@ -56,11 +56,11 @@
                 <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <div class="col-md-8 col-xs-12 nav-wrap">
                         <ul class="nav navbar-nav">
-                            <li><a href="#owl-hero" class="page-scroll">Home</a></li>
-                            <li><a href="#services" class="page-scroll">Sobre</a></li>
-                            <li><a href="#portfolio" class="page-scroll">App</a></li>
-                            <li><a href="#contact" class="page-scroll">Cadastro</a></li>
-                            <li><a href="#fun-facts" class="page-scroll">Login</a></li>
+                            <li><a href="livrosproximos.html" class="page-scroll">HOME</a></li>
+                            <li><a href="pesquisa.html" class="page-scroll">PESQUISAR</a></li>
+                            <li><a href="estante.html" class="page-scroll">ESTANTE</a></li>
+                            <li><a href="Perfil.html" class="page-scroll">MINHA CONTA</a></li>
+                            <li><a href="index.html" class="page-scroll">SAIR</a></li>
                         </ul>
                     </div>
                 </div>
@@ -89,40 +89,40 @@
  							<ul style="list-style:none;">
  							<li style="display:inline;">
  							<div style='text-align: right justify; width: 75px; display: inline-block; margin-right: 150px; margin-bottom: 50px;'>
-                            <p><h3 style='color: #fff;'>NOME:</h3>                            
-                            <h3 style='color: #fff;'>USERNAME:</h3>                            
-                            <h3 style='color: #fff;'>CEP:</h3>                   
+                            <p><h3 style='color: #fff;'>NOME:</h3>
+                            <h3 style='color: #fff;'>USERNAME:</h3>
+                            <h3 style='color: #fff;'>CEP:</h3>
                             <h3 style='color: #fff;'>EMAIL:</h3>                         </p>
                             </div>
                             </li>
                             <li style="display:inline;">
                             <div style='text-align: right justify; width: 500px; display: inline-block; margin-bottom: 50px;'>
-                            <p><h3 style='color: #fff;'>Xpmets Kalyn Marjoriê Kozihell</h3>                            
-                            <h3 style='color: #fff;'>Xpmets</h3>                            
-                            <h3 style='color: #fff;'>74663520</h3>                   
+                            <p><h3 style='color: #fff;'>Xpmets Kalyn Marjoriê Kozihell</h3>
+                            <h3 style='color: #fff;'>Xpmets</h3>
+                            <h3 style='color: #fff;'>74663520</h3>
                             <h3 style='color: #fff;'>emailexemplo@exemplo.com</h3>                         </p>
                             </div>
                             </li>
-                           
+
                             </ul>
                 </div>
             </div>
         </div>
     </section>
-    
+
      <!-- App
 	============================================= -->
    <section id="portfolio">
         <div class="container-fluid">
-			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 400px;">
-				<a class="btn btn-light" href="#" style='margin-top: 50px; width: 300px;'>Editar Perfil</a>
-                <a class="btn btn-light" href="#" style='margin-top: 50px; width: 300px;'>Mudar Senha</a>
+			<div>
+				<a class="btn btn-light" href="#" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Editar Perfil</a>
+                <a class="btn btn-light" href="#" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Mudar Senha</a>
 			</div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Informações 
+    <!-- Informações
 	============================================= -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
