Página de editar perfil

--- a/Web/Prototype/editarperfil.html
+++ b/Web/Prototype/editarperfil.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>Meu Perfil</title>
+    <title>Editar Perfil</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,11 +97,18 @@
                             </li>
                             <li style="display:inline;">
                             <div style='text-align: right justify; width: 500px; display: inline-block; margin-bottom: 50px;'>
-                            <p><h3 style='color: #fff;'>Xpmets Kalyn Marjoriê Kozihell</h3>
-                            <h3 style='color: #fff;'>Xpmets</h3>
-                            <h3 style='color: #fff;'>74663520</h3>
-                            <h3 style='color: #fff;'>emailexemplo@exemplo.com</h3>                         </p>
-                            </div>
+                              <div class="form-group">
+                                  <input type="text" class="form-control" id="Name" placeholder="Xpmets Kalyn Marjoriê Kozihell">
+                              </div>
+          		    <div class="form-group">
+                                  <input type="text" class="form-control" id="UserName" placeholder="Xpmets">
+                              </div>
+                              <div class="form-group">
+                                  <input type="number" class="form-control" id="CEP" placeholder="74663520">
+                              </div>
+                              <div class="form-group">
+                                  <input type="text" class="form-control" id="Email" placeholder="emailexemplo@exemplo.com">
+                              </div>
                             </li>
 
                             </ul>
@@ -115,8 +122,7 @@
    <section id="portfolio">
         <div class="container-fluid">
 			<div>
-				<a class="btn btn-light" href="editarperfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Editar Perfil</a>
-                <a class="btn btn-light" href="#" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Mudar Senha</a>
+				<a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Salvar</a>
 			</div>
                 </div>
             </div>
