Adição link botão cadastro

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -184,7 +184,7 @@
 		    <div class="form-group">
                         <input type="password" class="form-control" id="confirma" placeholder="Corfirmar Senha">
                     </div>
-                    <a href="#" class="btn-block">Cadastrar</a>
+                    <a href="#fun-facts" class="btn-block">Cadastrar</a>
                 </form>
             </div>
         </div>
