Atualização na pagina Perfil
Colocando a pagina de mudança de senha

--- a/Web/Prototype/Perfil.html
+++ b/Web/Prototype/Perfil.html
@@ -116,7 +116,7 @@
         <div class="container-fluid">
 			<div>
 				<a class="btn btn-light" href="editarperfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Editar Perfil</a>
-                <a class="btn btn-light" href="#" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Mudar Senha</a>
+                <a class="btn btn-light" href="mudarsenha.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Mudar Senha</a>
 			</div>
                 </div>
             </div>
