--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>RISE-Multipurpose Html Template</title>
+    <title>BookAway</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
