--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -134,7 +134,7 @@
                             <li style="display:inline;">
                             <div style='text-align: left justify; width: 450px; display: inline-block; '>
                             <h3 style='color: #fff;'>Troque ideias com outros leitores.</h3>
-                            <p>Como usuário do BookAway você poderá conversar e encontrar leitores com gostos parecidos com o seu. Caso queira realizar algum negócio, chege a um acordo tratando diretamento com o dono do livro.</p>
+                            <p>Como usuário do BookAway você poderá conversar e encontrar leitores com gostos parecidos com o seu. Caso queira realizar algum negócio, chegue a um acordo tratando diretamento com o dono do livro.</p>
                             </div>
                             </li>
                             </ul>
