--- a/Web/Prototype/estante.html
+++ b/Web/Prototype/estante.html
@@ -164,7 +164,7 @@
                 <h2>Adicionar Livro</h2>
                 <hr class="light-sep">
                 <div class="services-box">
-                    <div class="row wow fadeInUp" data-wow-delay=".3s">
+                    <div>
                         <div class="col-md-4">
                             <div class="media-left"><img src="img/estante/capa_livro.jpg" width="190" height="290" alt="fotr">
                                 <a href="#services" class="btn-block page-scroll" style='background: #808080;' >Adicionar capa</a>
