Remoção do FadeIn

--- a/Web/Prototype/mudarsenha.html
+++ b/Web/Prototype/mudarsenha.html
@@ -84,7 +84,7 @@
       <img src="img/perfil/profile.png" width="100%"> </div>
       <div class="container">
             <div class="services-box">
-                <div class="row wow fadeInUp" data-wow-delay=".3s">
+                <div class="row">
  							<ul style="list-style:none;">
  							<li style="display:inline;">
  							<div style='text-align: right justify; width: 275px; display: inline-block; margin-right: 50px; margin-bottom: 50px;'>
