--- a/Web/Prototype/pesquisa.html
+++ b/Web/Prototype/pesquisa.html
@@ -76,7 +76,7 @@
         <div class="container">
             <h2>Pesquisa</h2>
             <hr class="sep">
-            <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
+            <div class="col-md-6 col-md-offset-3">
                 <form>
                     <div class="form-group">
                         <input type="text" class="form-control" id="Titulo" placeholder="Titulo">
