--- a/Web/Prototype/livrosproximos.html
+++ b/Web/Prototype/livrosproximos.html
@@ -77,7 +77,7 @@
     <section id="welcome">
         <div class="container">
             <h2>Bem vindo Usuário X</h2>
-            <img class="img-responsive center-block wow fadeInUp" data-wow-delay=".3s" src="img/portfolio/user.png" alt="logo">
+            <img class="img-responsive center-block" src="img/portfolio/user.png" alt="logo">
         </div>
     </section>
 
