--- a/Web/Prototype/pesquisa.html
+++ b/Web/Prototype/pesquisa.html
@@ -100,7 +100,7 @@
 	============================================= -->
     <section id="services">
         <div class="container">
-            <h2>Resultados:</h2>
+            <h2>Resultados</h2>
             <hr class="light-sep">
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s" style="padding-bottom: 40px;">
