--- a/Web/Prototype/pesquisa.html
+++ b/Web/Prototype/pesquisa.html
@@ -105,7 +105,7 @@
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s" style="padding-bottom: 40px;">
                     <div class="col-md-4">
-                        <table style="height: 10%;">
+                        <table>
                             <tr>
                                 <td style="padding-right: 20px; padding-left: 50px;">   
                                     <img src="img/portfolio/fotr.jpg" alt="fotr">
