--- a/Web/Prototype/estante.html
+++ b/Web/Prototype/estante.html
@@ -73,86 +73,104 @@
 
         <!-- Estante
             ============================================= -->
-        <section id="services">
-            <div class="container">
-                <h2>Minha Estante</h2>
-                <hr class="light-sep">
-                <div class="services-box">
-                    <div class="row wow fadeInUp" data-wow-delay=".3s">
+          <section id="services">
+        <div class="container">
+            <h2>Resultados:</h2>
+            <hr class="light-sep">
+            <div class="services-box">
+                <div class="row wow fadeInUp" data-wow-delay=".3s" style="padding-bottom: 40px;">
+                    <div class="col-md-4">
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/estante/Harry_Potter.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>Harry Potter e as Relíquias da Morte</h3>
+									<p>Coleção: Harry Potter</p>
+									<p>J. K. Rownling</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Harry_Potter.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>Harry Potter e as Relíquias da Morte</h3>
-                                <p>Coleção: Harry Potter</p>
-                                <p>J. K. Rownling</p>
-
-                            </div>
-                        </div>
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/estante/Sonho_William.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>Sonho de uma noite de verão</h3>
+                                    <p>William Shakespeare</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Sonho_William.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>Sonho de uma noite de verão</h3>
-                                <p>William Shakespeare</p>
-
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/eragon.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>Eragon</h3>
-                                <p>Coleção: Trilogia: A Herança</p>
-                                <p>Christopher Paolini</p>
-
-                            </div>
-                        </div>
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/estante/eragon.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>Eragon</h3>
+                                    <p>Coleção: Trilogia: A Herança</p>
+                                    <p>Christopher Paolini</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                     </div>
 
-                    <div class="row wow fadeInUp" data-wow-delay=".6s">
+                   <div class="row wow fadeInUp" data-wow-delay=".3s" style="padding-bottom: 40px;">
+                    <div class="col-md-4">
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/portfolio/fotr.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>The fellowship of the Ring</h3>
+                                    <p>Coleção: The Lord of the Rings</p>
+                                    <p>J.R.R. Tolkien</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/portfolio/fotr.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>The fellowship of the Ring</h3>
-                                <p>Coleção: The Lord of the Rings</p>
-                                <p>J.R.R. Tolkien</p>
-                            </div>
-                        </div>
-
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/estante/The_Hunger_Games.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>Jogos Vorazes</h3>
+                                    <p>Coleção: Jogos Vorazes</p>
+                                    <p>Suzanne Collins</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                         <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/The_Hunger_Games.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>Jogos Vorazes</h3>
-                                <p>Coleção: Jogos Vorazes</p>
-                                <p>Suzanne Collins</p>
-
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="media-left"><img src="img/estante/Game.jpg" width="190" height="290" alt="fotr">
-                                <a class="btn btn-light" href="#portfolio">Remover Livro</a>
-                            </div>
-
-                            <div class="media-body">
-                                <h3>Game of Thrones (5 primeiros livros)</h3>
-                                <p>Coleção: Game of Thrones</p>
-                                <p>George R. R. Martin</p>
-
-                            </div>
-                        </div>
+                        <table>
+                            <tr>
+                                <td style="padding-right: 20px; padding-left: 50px;"> 
+									<img src="img/estante/Game.jpg" width="190" height="290" alt="fotr">
+									<a class="btn btn-light" href="#portfolio">Remover Livro</a>
+								</td>
+                                <td class="media-body">
+									<h3>Game of Thrones (5 primeiros livros)</h3>
+                                    <p>Coleção: Game of Thrones</p>
+                                    <p>George R. R. Martin</p>
+								</td>
+                            </tr>
+                        </table>
+                     </div>
                     </div>
                 </div>
             </div>
