Correção - retirada distância

--- a/Web/Prototype/livrosproximos.html
+++ b/Web/Prototype/livrosproximos.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>BookAway Livros Próximos</title>
+    <title>Livros em Movimento</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,7 +84,7 @@
 	============================================= -->
     <section id="services">
         <div class="container">
-            <h2>Livros próximos a você</h2>
+            <h2>Livros em movimento</h2>
             <hr class="light-sep">
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s" style="padding-bottom: 40px;">
@@ -98,7 +98,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
@@ -114,7 +113,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
@@ -130,7 +128,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
@@ -149,7 +146,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
@@ -157,7 +153,7 @@
                      </div>               
                
                 
-					<div class="col-md-4">
+		<div class="col-md-4">
                         <table>
                             <tr>
                                 <td style="padding-right: 20px; padding-left: 50px;">
@@ -167,7 +163,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
@@ -183,7 +178,6 @@
                                     <h3>The fellowship of the Ring</h3>
                                     <p>Coleção: The Lord of the Rings</p>
                                     <p>J.R.R. Tolkien</p>
-                                    <p>500 metros</p>
                                     <p>Vender | Trocar</p>
                                 </td>
                             </tr>
