Correção de comandos falhos

--- a/Web/Bookaway/src/main/webapp/editarperfil.html
+++ b/Web/Bookaway/src/main/webapp/editarperfil.html
@@ -82,17 +82,18 @@
             ============================================= -->
         <section id="services">
             <div class="column">
-                <img src="img/perfil/profile.png" width="100%"> </div>
+                <img src="img/perfil/profile.png" width="100%">
+            </div>
             <div class="container">
                 <div class="services-box">
                     <div>
                         <ul style="list-style:none;">
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 75px; display: inline-block; margin-right: 150px; margin-bottom: 50px;'>
-                                    <p><h3 style='color: #fff;'>NOME:</h3>
+                                    <h3 style='color: #fff;'>NOME:</h3>
                                     <h3 style='color: #fff;'>USERNAME:</h3>
                                     <h3 style='color: #fff;'>CEP:</h3>
-                                    <h3 style='color: #fff;'>EMAIL:</h3>                         </p>
+                                    <h3 style='color: #fff;'>EMAIL:</h3>
                                 </div>
                             </li>
                             <li style="display:inline;">
@@ -125,26 +126,24 @@
                     <a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Salvar</a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<!-- Informações
-    ============================================= -->
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="bootstrap-assets/js/bootstrap.min.js"></script>
-<script src="js/custom.js"></script>
-<!-- JS PLUGINS -->
-<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="plugins/waypoints/jquery.waypoints.min.js"></script>
-<script src="plugins/countTo/jquery.countTo.js"></script>
-<script src="plugins/inview/jquery.inview.min.js"></script>
-<script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
-<script src="plugins/WOW/dist/wow.min.js"></script>
-<!-- GOOGLE MAP -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
-</body>
+        </section>
+        <!-- Informações
+            ============================================= -->
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="bootstrap-assets/js/bootstrap.min.js"></script>
+        <script src="js/custom.js"></script>
+        <!-- JS PLUGINS -->
+        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="js/jquery.easing.min.js"></script>
+        <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="plugins/countTo/jquery.countTo.js"></script>
+        <script src="plugins/inview/jquery.inview.min.js"></script>
+        <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
+        <script src="plugins/WOW/dist/wow.min.js"></script>
+        <!-- GOOGLE MAP -->
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
+    </body>
 
 </html>
