--- a/Web/Bookaway/src/main/webapp/estante.html
+++ b/Web/Bookaway/src/main/webapp/estante.html
@@ -177,6 +177,7 @@
             <hr class="light-sep">
         </section>
 
+        <!-- Adicionar Livro-->
         <section id="welcome">
             <div class="container">
                 <h2>Adicionar Livro</h2>
@@ -205,47 +206,45 @@
 
                         </div>
                     </div>
-
-                    <br></br>
-
-
-
+                    <br>
+                    
+                    
                     <div class="form-group">
+
                         <textarea class="form-control" rows="9" placeholder="Descrição"></textarea>
                     </div>
-                    <br></br>
+                    <br>
                     <div align="center">
                         <a href="#services" class="btn-block page-scroll" style='background: #808080; width: 250px' >Adicionar Livro</a>
                     </div>
                 </div>
             </div>
-        </div>
-        <hr class="light-sep">
-    </section>
+            <hr class="light-sep">
+        </section>
 
 
-    <!-- Footer
-            ============================================= -->
-    <footer>
-        <div class="container">
-            <h1>BookAway</h1>
-            <h6>Powered by: <span>Rise</span></h6>
-        </div>
-    </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap-assets/js/bootstrap.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- JS PLUGINS -->
-    <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
-    <script src="plugins/countTo/jquery.countTo.js"></script>
-    <script src="plugins/inview/jquery.inview.min.js"></script>
-    <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
-    <script src="plugins/WOW/dist/wow.min.js"></script>
-    <!-- GOOGLE MAP -->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-</body>
+        <!-- Footer
+                ============================================= -->
+        <footer>
+            <div class="container">
+                <h1>BookAway</h1>
+                <h6>Powered by: <span>Rise</span></h6>
+            </div>
+        </footer>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="bootstrap-assets/js/bootstrap.min.js"></script>
+        <script src="js/custom.js"></script>
+        <!-- JS PLUGINS -->
+        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="js/jquery.easing.min.js"></script>
+        <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="plugins/countTo/jquery.countTo.js"></script>
+        <script src="plugins/inview/jquery.inview.min.js"></script>
+        <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
+        <script src="plugins/WOW/dist/wow.min.js"></script>
+        <!-- GOOGLE MAP -->
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
+    </body>
 </html>
