--- a/Web/Bookaway/src/main/webapp/index.html
+++ b/Web/Bookaway/src/main/webapp/index.html
@@ -111,7 +111,7 @@
                 <div class="services-box">
                     <div class="row wow fadeInUp" data-wow-delay=".3s">
 
-                        <h4 style="color: #fff; margin-bottom: 30px;""><i>Para amantes da arte literária.</i></h4>
+                        <h4 style="color: #fff; margin-bottom: 30px;"><i>Para amantes da arte literária.</i></h4>
                         <ul style="list-style:none;">
                             <li style="display:inline;">
                                 <div style='text-align: left justify; width: 450px; display: inline-block; margin-right: 150px; margin-bottom: 50px; '>
@@ -154,79 +154,77 @@
                     <a class="btn btn-light" href="#" style='margin-top: 150px; width: 300px;'>Instale Agora</a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<!-- Cadastro
-    ============================================= -->
-<section id="contact">
-    <div class="container">
-        <h2>Crie Um Cadastro</h2>
-        <hr class="sep">
-        <p>Preencha os dados abaixo para se cadastrar.</p>
-        <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
-            <form>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="Name" placeholder="Nome">
+        </section>
+        <!-- Cadastro
+            ============================================= -->
+        <section id="contact">
+            <div class="container">
+                <h2>Crie Um Cadastro</h2>
+                <hr class="sep">
+                <p>Preencha os dados abaixo para se cadastrar.</p>
+                <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="Name" placeholder="Nome">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="UserName" placeholder="Username">
+                        </div>
+                        <div class="form-group">
+                            <input type="number" class="form-control" id="CEP" placeholder="CEP">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="Email" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="senha" placeholder="Senha">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="confirma" placeholder="Corfirmar Senha">
+                        </div>
+                        <a href="#fun-facts" class="btn-block">Cadastrar</a>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="UserName" placeholder="Username">
+            </div>
+        </section>
+        <!-- Acesse 
+            ============================================= -->
+        <section id="fun-facts">
+            <div style='margin-bottom: 200px;' class="container">
+                <h2>Acesse </h2>
+                <hr class="light-sep">
+                <p>Comece a movimentar seus livros!</p>
+                <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
+                    <form style='margin-top:70px;'>
+                        <div class="form-group">
+                            <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username ou Email">
+                        </div>
+                        <div class="form-group">
+                            <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="password" class="form-control" id="senha" placeholder="Senha">
+                        </div>
+                        <a href="livrosemmovimento.html" class="btn-block" style='background: #fff; color: #0d0d0d; margin-top: 35px;'>Login</a>
+                        <a href="#" class="btn-block" style='background: #3B5998;' >Login com facebook</a>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <input type="number" class="form-control" id="CEP" placeholder="CEP">
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="Email" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="senha" placeholder="Senha">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="confirma" placeholder="Corfirmar Senha">
-                </div>
-                <a href="#fun-facts" class="btn-block">Cadastrar</a>
-            </form>
-        </div>
-    </div>
-</section>
-<!-- Acesse 
-    ============================================= -->
-<section id="fun-facts">
-    <div style='margin-bottom: 200px;' class="container">
-        <h2>Acesse </h2>
-        <hr class="light-sep">
-        <p>Comece a movimentar seus livros!</p>
-        <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
-            <form style='margin-top:70px;'>
-                <div class="form-group">
-                    <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username ou Email">
-                </div>
-                <div class="form-group">
-                    <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="password" class="form-control" id="senha" placeholder="Senha">
-                </div>
-                <a href="livrosemmovimento.html" class="btn-block" style='background: #fff; color: #0d0d0d; margin-top: 35px;'>Login</a>
-                <a href="#" class="btn-block" style='background: #3B5998;' >Login com facebook</a>
-            </form>
-        </div>
-    </div>
-</section>
-<!-- Informações 
-    ============================================= -->
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="bootstrap-assets/js/bootstrap.min.js"></script>
-<script src="js/custom.js"></script>
-<!-- JS PLUGINS -->
-<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="plugins/waypoints/jquery.waypoints.min.js"></script>
-<script src="plugins/countTo/jquery.countTo.js"></script>
-<script src="plugins/inview/jquery.inview.min.js"></script>
-<script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
-<script src="plugins/WOW/dist/wow.min.js"></script>
-<!-- GOOGLE MAP -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
-</body>
+            </div>
+        </section>
+        <!-- Informações 
+            ============================================= -->
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="bootstrap-assets/js/bootstrap.min.js"></script>
+        <script src="js/custom.js"></script>
+        <!-- JS PLUGINS -->
+        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="js/jquery.easing.min.js"></script>
+        <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="plugins/countTo/jquery.countTo.js"></script>
+        <script src="plugins/inview/jquery.inview.min.js"></script>
+        <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
+        <script src="plugins/WOW/dist/wow.min.js"></script>
+        <!-- GOOGLE MAP -->
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
+    </body>
 
 </html>
