--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -89,10 +89,10 @@
                         <ul style="list-style:none;">
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 75px; display: inline-block; margin-right: 150px; margin-bottom: 50px;'>
-                                    <p><h3 style='color: #fff;'>NOME:</h3>
+                                    <h3 style='color: #fff;'>NOME:</h3>
                                     <h3 style='color: #fff;'>USERNAME:</h3>
                                     <h3 style='color: #fff;'>CEP:</h3>
-                                    <h3 style='color: #fff;'>EMAIL:</h3>                         </p>
+                                    <h3 style='color: #fff;'>EMAIL:</h3>
                                 </div>
                             </li>
                             <li style="display:inline;">
