Recebe parâmetros do cadastro (UploadServlet)

--- a/Web/Bookaway/src/main/webapp/estante.html
+++ b/Web/Bookaway/src/main/webapp/estante.html
@@ -191,19 +191,19 @@
                         <form method="post" action="upload" enctype="multipart/form-data">
                             <br>
                             <h6>Nome</h6>
-                            <input type="text" required="required" class="form-control" id="Nome" placeholder="Nome">
+                            <input type="text" required="required" class="form-control" name="Nome" placeholder="Nome">
 
                             <h6>Coleção</h6>
-                            <input type="text" required="required" class="form-control" id="Colecao" placeholder="Coleção">
+                            <input type="text" class="form-control" name="Colecao" placeholder="Colecao">
 
                             <h6>Autor(a)</h6>
-                            <input type="text" required="required" class="form-control" id="Autor" placeholder="Autor(a)">
+                            <input type="text" required="required" class="form-control" name="Autor" placeholder="Autor(a)">
 
                             <h6>Gênero</h6>
-                            <input type="text" required="required" class="form-control" id="Genero" placeholder="Gênero">
+                            <input type="text" required="required" class="form-control" name="Genero" placeholder="Gênero">
 
                             <h6>Capa</h6>
-                            <input type="file" name="photo" required="required"><br>
+                            <input type="file" name="photo" required="required" name="Capa"><br>
 
                             <input type="submit"  value="Adicionar Livro" class="btn-block page-scroll" style='background: #808080;'>
                         </form>
