--- a/Web/Bookaway/src/main/webapp/estante.html
+++ b/Web/Bookaway/src/main/webapp/estante.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-        <title>BookAway Remover Livro</title>
+        <title>BookAway Minha Estante</title>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,12 +84,12 @@
                                 <tr>
                                     <td style="padding-right: 20px; padding-left: 50px;"> 
                                         <img src="img/estante/Harry_Potter.jpg" width="200" height="300" alt="HarryPotter">
-                                        <button class="btn btn-transparent" href="portifolio" style="width:95px; padding: 15px;">Editar</button><button class="btn btn-light" href="portifolio" style="width:105px; padding: 15px;">Remover</button>
+                                        <button class="btn btn-transparent" href="#welcome"  class="btn-block page-scroll"  accesskey=""style="width:95px; padding: 15px;" href="#welcome"  class="btn-block page-scroll" class="btn-block page-scroll">Editar</button><button class="btn btn-light" href="portifolio" style="width:105px; padding: 15px;">Remover</button>
                                     </td>
                                     <td class="media-body">
                                         <h3>Harry Potter e as Relíquias da Morte</h3>
                                         <p>Coleção: Harry Potter</p>
-                                        <p>J. K. Rownling</p>
+                                        <p>J. K. Rowling</p>
                                     </td>
                                 </tr>
                             </table>
@@ -99,7 +99,7 @@
                                 <tr>
                                     <td style="padding-right: 20px; padding-left: 50px;"> 
                                         <img src="img/estante/Sonho_William.jpg" width="190" height="290" alt="Sonho">
-                                        <a class="btn btn-light" href="#portfolio">Remover Livro</a>
+                                        <a class="btn btn-light" href="#welcome"  class="btn-block page-scroll">Remover Livro</a>
                                     </td>
                                     <td class="media-body">
                                         <h3>Sonho de uma noite de verão</h3>
@@ -177,10 +177,10 @@
             <hr class="light-sep">
         </section>
 
-        <!-- Adicionar Livro-->
+        <!-- Adicionar ou Editar Livro-->
         <section id="welcome">
             <div class="container">
-                <h2>Adicionar Livro</h2>
+                <h2>Adicionar ou Editar Livro</h2>
                 <hr class="light-sep">
                 <div class="services-box">
                     <div class="col-md-4" style="margin-left: 50px;">
